--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "eslint-plugin-react": "^7.31.8"
   }
 }
